<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">console24x7</string>
    <string name="menu_settings">console24x7</string>

    <string name="button1_title">Configure</string>
    <string name="button2_title">Check Update</string>
    <string name="button3_title">Check Alive</string>
    <string name="button4_title">Start FTP</string>
    <string name="button5_title">VNC Reverse Conn</string>
    <string name="button6_title">Quit</string>
    <string name="text1_noextstorage">Cannot find external storage! FTP cannot be run on this device!</string>
    <string name="text1_noftpserver">FTP has not started! Please configure and start everything manually.</string>
    <string name="text1_error_nulladdr">Error: FTP started but address is null!</string>
    <string name="text1_error_failed">Error: FTP failed to start, check your hardware/network!</string>
    <string name="text1_error_stopped">Error: FTP has stopped!</string>

    <string name="settings_alarm_title">Alarm Settings</string>
    <string name="apkupdate_title">Apk-Update Check Time</string>
    <string name="apkupdate_summary">Specify the time of the day for checking display24x7 app update. Input an 24-hour-format number, e.g. 2359 = 11:59pm</string>
    <string name="apkupdate_validation_error">Wrong input, use 24-hour-format</string>
    <string name="apkupdate_alarm_status">Alarm updated for check update time of display24x7 app</string>
    <string name="autostart_title">Auto-Start Check Time</string>
    <string name="autostart_summary">Select how often to check the display24x7 app to see if it is still alive, if found to be not running, launch it immediately</string>
    <string-array name="autostartListArray">
        <item>Every 1 Hour</item>
        <item>Every 30 Minutes</item>
        <item>Every 15 Minutes</item>
    </string-array>
    <string-array name="autostartListValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="autostart_alarm_status">Alarm updated for check alive frequency of display24x7 app</string>

    <string name="settings_ftp_title">FTP Settings</string>
    <string name="username_title">User Name</string>
    <string name="password_title">Pass Word</string>
    <string name="portnum_title">Port Number</string>
    <string name="network_title">Network Connection</string>
    <string-array name="networkListArray">
        <item>Use WiFi Connection</item>
        <item>Use Proxy Connection</item>
    </string-array>
    <string-array name="networkListValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="stayawake_title">Keep Device Awake (CPU Full Speed)</string>
 
    <string name="settings_vnc_title">VNC Settings</string>
    <string name="vncpassword_title">VNC Pass Word</string>
    <string name="vncportnum_title">VNC Port Number</string>
    <string name="vncreversehost_title">VNC Reverse Host</string>
    <string name="vncreverseport_title">VNC Reverse Port</string>
    <string name="vncmethod_title">VNC Display Method</string>
    <string-array name="vncmethodListArray">
        <item>Auto Detect</item>
        <item>FLINGER</item>
        <item>GRALLOCK</item>
        <item>Frame Buffer</item>
    </string-array>
    <string-array name="vncmethodListValues">
        <item>auto</item>
        <item>flinger</item>
        <item>gralloc</item>
        <item>fb</item>
    </string-array>
 
    <string name="username_validation_error">Wrong input, only letter and numbers</string>
    <string name="password_validation_error">Wrong input, only letter and numbers</string>
    <string name="hostname_validation_error">Wrong input, please a valid hostname</string>
    <string name="portnum_validation_error">Wrong input, only value from 1 to 65535</string>
    <string name="content_warning">Warning: content.xml is not available, you may want to upload it.</string>
    <string name="storage_warning">Warning: external storage is not available, you may want to mount it.</string>

    <string name="update_state_checking">Checking web server for any update...</string>
    <string name="update_state_noupdate">No update is available.</string>
    <string name="update_state_downloading">Downloading apk from web server...</string>
    <string name="update_state_uninstalling">Uninstalling old version...</string>
    <string name="update_state_installing">Installing new version...</string>
    <string name="update_state_verifying">Verifying...</string>
    <string name="update_state_done">Update has finished.</string>
    <string name="update_state_failed">Failed: updated VersionCode not matched with VersionFile!</string>
 
    <string name="pst_connecting">connecting</string>
    <string name="pst_connected">connected</string>
    <string name="pst_failed">failed</string>
    <string name="pst_unreachable">unreachable</string>
    <string name="pst_disconnected">disconnected</string>
    <string name="unknown">unknown</string>

</resources>