<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_ftp_title" >
        <EditTextPreference
            android:key="vncpassword"
            android:title="@string/vncpassword_title"
            android:defaultValue="MyPassWord" />
        <EditTextPreference
            android:key="vncportnum"
            android:title="@string/vncportnum_title"
            android:defaultValue="5901" />
        <EditTextPreference
            android:key="vncreversehost"
            android:title="@string/vncreversehost_title"
            android:defaultValue="127.0.0.1" />
        <EditTextPreference
            android:key="vncreverseport"
            android:title="@string/vncreverseport_title"
            android:defaultValue="5500" />
        <ListPreference
            android:key="vncmethod"
            android:title="@string/vncmethod_title"
            android:entries="@array/vncmethodListArray"
            android:entryValues="@array/vncmethodListValues"
            android:defaultValue="auto" />
    </PreferenceCategory>

</PreferenceScreen>